Issue Fixed - Row no longer collapses after last question has been answered

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -148,10 +148,6 @@ body {
 }
 
 
-#Game_Dict {
-    display: none;
-}
-
 /* MODAL */
 .modal-content {
     justify-content: center;
